# kernum

./: CMakeLists.txt
src/: main.cpp
src/chunks/: Chunk.cpp  Chunk.h
src/engine/: engine.cpp  engine.h
src/graphics/: Texture.h  TextureManager.cpp  TextureManager.h
src/render/: Camera.h  Renderer.h  WorldRenderer.cpp  WorldRenderer.h
src/utils/: FCoords.h
src/world/chunks/: Chunk.h  ChunkGenerator.cpp  ChunkGenerator.h  ChunkManager.cpp  ChunkManager.h  GeneratorConfig.cpp  GeneratorConfig.h
src/world/tiles/: Tile.h  TileManager.cpp  TileManager.h
